--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
+body {
+  font-family: 'Segoe UI Local', 'Segoe UI Web (West European)';
+}
+
 <h2>A Tutorial on Stance Detection</h2>
 <h3>Tutorial to be Presented at WSDM 2022: ACM International Conference on Web Search and Data Mining</h3>
+Presenter Biographies
