--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-body {
-  font-family: 'Segoe UI Local', 'Segoe UI Web (West European)';
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body, h1, h2, h3, h4, h5, h6  {
+  font-family: "Segoe UI", Arial, sans-serif;
 }
+</style>
+<body>
 
 <h2>A Tutorial on Stance Detection</h2>
 <h3>Tutorial to be Presented at WSDM 2022: ACM International Conference on Web Search and Data Mining</h3>
 <p/>
 Presenter Biographies
+
+</body>
+</html> 
