--- a/index.html
+++ b/index.html
@@ -8,11 +8,61 @@ body, h1, h2, h3, h4, h5, h6  {
 }
 </style>
 <body>
-
-<h2>A Tutorial on Stance Detection</h2>
-<h3>Tutorial to be Presented at WSDM 2022: ACM International Conference on Web Search and Data Mining</h3>
+<center>
+<h3>A Tutorial on Stance Detection</h3>
+<h5>(Tutorial at ACM International Conference on Web Search and Data Mining (WSDM) 2022)</h5>
 <p/>
-Presenter Biographies
+<h4>Abstract</h4>
+<p/>
+<b>Stance detection</b> (also known as stance classification, stance prediction, and stance analysis) is a problem related to social media analysis, natural language processing, and information retrieval, which aims to determine the position of a person from a piece of text they produce, towards a target (a concept, idea, event, etc.) either explicitly specified in the text, or implied only. Common stance classes include Favor, Against, and None. In this tutorial, we will define the core concepts and other related research problems, present historical and contemporary approaches to stance detection (including shared tasks and tools employed), provide pointers to related datasets, and cover open research directions and application areas of stance detection. As solutions to stance detection can contribute to diverse applications including trend analysis, opinion surveys, user reviews, personalization, and predictions for referendums and elections, it will continue to stand as an important research problem, mostly on textual content currently, and particularly on Web content including social media.
+
+<h4>Tutorial Outline</h4>
+(1) Introduction<p/>
+(2) Core concepts and related problems<p/>
+• Definitions of stance detection and subproblems of stance
+detection.<p/>
+• Interrelationships with related problems including sentiment
+analysis, emotion recognition, sarcasm/irony detection,
+controversy detection, and argument mining<p/>
+(3) Stance detection competitions (shared tasks)<p/>
+• SemEval-2016 Task 6: Detecting Stance in Tweets<p/>
+• Shared Task of Stance Detection in Chinese Microblogs at
+NLPCC-ICCPOL-2016<p/>
+• Shared Task of Stance Detection in Spanish and Catalan
+Tweets at IberEval-2017<p/>
+• SardiStance: Stance Detection Task in Italian Tweets at
+EVALITA-2020<p/>
+• VaxxStance: Going Beyond Text in Cross-lingual Stance
+Detection at IberLeF-2021<p/>
+(4) Historical and contemporary approaches<p/>
+• Earlier studies on stance detection<p/>
+• Machine learning based approaches<p/>
+• Deep learning based approaches<p/>
+• Ensemble learning approaches<p/>
+• Related learning systems and tools<p/>
+(5) Common stance detection datasets<p/>
+(6) Application areas
+• Opinion surveys/polling
+• Public health surveillance
+• Information retrieval
+• Stance summarization
+• Rumour classification
+• Fake news detection
+(7) Outstanding issues
+• Stance detection in data streams
+• Cross-lingual and multilingual stance detection
+• Context-sensitive stance detection
+(8) Conclusion
+<p/>
+<h4>Presenter Biographies</h4>
+<u>Dilek Küçük</u>
+<p/>
+Dilek Küçük is an associate professor and chief researcher at the Energy Institute of TÜBİTAK Marmara Research Center (MRC) in Ankara, Turkey. She is also the leader of Power Systems Information Technologies Group at the institute. Her group is the recipient of the best research group award of TÜBİTAK MRC for the year 2017. She received her B.Sc., M.Sc. and Ph.D. degrees in Computer Engineering all from Middle East Technical University (Ankara, Turkey) in 2003, 2005, and 2011, respectively. Between May 2013 and May 2014, she studied as a post-doctoral researcher at European Commission's Joint Research Centre in Italy. Her research interests include stance detection, social media analysis, natural language processing, energy informatics, and data mining. She is the author or co-author of 16 papers published in SCI-indexed journals (including ACM-CSUR and IEEE transactions) and 40 papers presented at international conferences\slash workshops. She was a joint tutorial presenter at the SIGIR 2021 conference.
+<p/>
+
+<u>Fazli Can</u>
+<p/>
+Fazli Can is a full professor and leader of the Bilkent Information Retrieval Group at the Computer Engineering Department of Bilkent University in Ankara, Turkey. Previously, he was a tenured full professor at the Computer Science Department of Miami University in Oxford, OH, USA where he taught between 1986 and 2005. He received the Ph.D. degree in Computer Engineering from Middle East Technical University (Ankara, Turkey) in 1985. During his Ph.D., he had also studied at Arizona State University, Tempe, AZ, USA, and Intel, Chandler, AZ, USA; as a part of the RAP Database Machine Project. He was one of the two co-editors of ACM SIGIR Forum between 1995 and 2002. He has extensively published in information retrieval, data mining, natural language processing, and quantitative linguistics research forums such as the journals ACM-TKDD, ACM-TODS, ACM-TOIS, IEEE-TNNLS, IP&M, and JASIST. He has participated in and served on several conference program committees; such as ASONAM, CIKM, ECIR, and SIGIR; as a member, senior member, or general co-chair. He was a joint tutorial presenter at the SIGIR 2013, WSDM 2014, WWW 2015, and SIGIR 2021 conferences. His recent joint works on data stream processing and stance detection appeared in conferences\slash journals such as CIKM, ACM-TKDD, ACM-CSUR, IEEE-TNNLS, and Art. Int. Rev.
 
 </body>
 </html> 
