--- a/index.html
+++ b/index.html
@@ -11,49 +11,62 @@ body, h1, h2, h3, h4, h5, h6  {
 <center>
 <h3>A Tutorial on Stance Detection</h3>
 <h5>(Tutorial at ACM International Conference on Web Search and Data Mining (WSDM) 2022)</h5>
+</center>
 <p/>
 <h4>Abstract</h4>
 <p/>
 <b>Stance detection</b> (also known as stance classification, stance prediction, and stance analysis) is a problem related to social media analysis, natural language processing, and information retrieval, which aims to determine the position of a person from a piece of text they produce, towards a target (a concept, idea, event, etc.) either explicitly specified in the text, or implied only. Common stance classes include Favor, Against, and None. In this tutorial, we will define the core concepts and other related research problems, present historical and contemporary approaches to stance detection (including shared tasks and tools employed), provide pointers to related datasets, and cover open research directions and application areas of stance detection. As solutions to stance detection can contribute to diverse applications including trend analysis, opinion surveys, user reviews, personalization, and predictions for referendums and elections, it will continue to stand as an important research problem, mostly on textual content currently, and particularly on Web content including social media.
 
 <h4>Tutorial Outline</h4>
-(1) Introduction<p/>
-(2) Core concepts and related problems<p/>
-• Definitions of stance detection and subproblems of stance
-detection.<p/>
-• Interrelationships with related problems including sentiment
+<ol>
+<li>Introduction</li>
+<li>Core concepts and related problems</li>
+<ul>
+<li>Definitions of stance detection and subproblems of stance
+detection.</li>
+<li>Interrelationships with related problems including sentiment
 analysis, emotion recognition, sarcasm/irony detection,
-controversy detection, and argument mining<p/>
-(3) Stance detection competitions (shared tasks)<p/>
-• SemEval-2016 Task 6: Detecting Stance in Tweets<p/>
-• Shared Task of Stance Detection in Chinese Microblogs at
-NLPCC-ICCPOL-2016<p/>
-• Shared Task of Stance Detection in Spanish and Catalan
-Tweets at IberEval-2017<p/>
-• SardiStance: Stance Detection Task in Italian Tweets at
-EVALITA-2020<p/>
-• VaxxStance: Going Beyond Text in Cross-lingual Stance
-Detection at IberLeF-2021<p/>
-(4) Historical and contemporary approaches<p/>
-• Earlier studies on stance detection<p/>
-• Machine learning based approaches<p/>
-• Deep learning based approaches<p/>
-• Ensemble learning approaches<p/>
-• Related learning systems and tools<p/>
-(5) Common stance detection datasets<p/>
-(6) Application areas
-• Opinion surveys/polling
-• Public health surveillance
-• Information retrieval
-• Stance summarization
-• Rumour classification
-• Fake news detection
-(7) Outstanding issues
-• Stance detection in data streams
-• Cross-lingual and multilingual stance detection
-• Context-sensitive stance detection
-(8) Conclusion
-<p/>
+controversy detection, and argument mining</li>
+</ul>
+<li>Stance detection competitions (shared tasks)</li>
+<ul>
+<li>SemEval-2016 Task 6: Detecting Stance in Tweets</li>
+<li>Shared Task of Stance Detection in Chinese Microblogs at
+NLPCC-ICCPOL-2016</li>
+<li>Shared Task of Stance Detection in Spanish and Catalan
+Tweets at IberEval-2017</li>
+<li>SardiStance: Stance Detection Task in Italian Tweets at
+EVALITA-2020</li>
+<li>VaxxStance: Going Beyond Text in Cross-lingual Stance
+Detection at IberLeF-2021</li>
+</ul>
+<li>Historical and contemporary approaches</li>
+<ul>
+<li>Earlier studies on stance detection</li>
+<li>Machine learning based approaches</li>
+<li>Deep learning based approaches</li>
+<li>Ensemble learning approaches</li>
+<li>Related learning systems and tools</li>
+</ul>
+<li>Common stance detection datasets</li>
+<li>Application areas</li>
+<ul>
+<li>Opinion surveys/polling</li>
+<li>Public health surveillance</li>
+<li>Information retrieval</li>
+<li>Stance summarization</li>
+<li>Rumour classification</li>
+<li>Fake news detection</li>
+</ul>
+<li>Outstanding issues</li>
+<ul>
+<li>Stance detection in data streams</li>
+<li>Cross-lingual and multilingual stance detection</li>
+<li>Context-sensitive stance detection</li>
+</ul>
+<li>Conclusion</li>
+<ol>
+
 <h4>Presenter Biographies</h4>
 <u>Dilek Küçük</u>
 <p/>
