--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<title>A Tutorial on Stance Detection</title>
 <style>
 body, h1, h2, h3, h4, h5, h6  {
   font-family: "Segoe UI", Arial, sans-serif;
