--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body, h1, h2, h3, h4, h5, h6  {
 <body>
 <center>
 <h3>A Tutorial on Stance Detection</h3>
-<h5>(Tutorial at ACM International Conference on Web Search and Data Mining (WSDM) 2022)</h5>
+(Tutorial at ACM International Conference on Web Search and Data Mining (WSDM) 2022)<p/>
 </center>
 <p/>
 <h4>Abstract</h4>
