--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@ Detection at IberLeF-2021</li>
 <li>Conclusion</li>
 </ol>
 
+<h4>Related Publications</h4>
+<ul>
+<li>Küçük, D., & Can, F. (2020). Stance detection: A survey. ACM Computing Surveys (CSUR), 53(1), 1-37.</li>
+<li>Küçük, D., & Can, F. (2021). Stance detection: Concepts, approaches, resources, and outstanding issues. In Proceedings of the 44th International ACM SIGIR Conference on Research and Development in Information Retrieval (pp. 2673-2676).</li>
+</ul>
+  
 <h4>Presenter Biographies</h4>
 <u>Dilek Küçük</u>
 <p/>
@@ -74,6 +80,7 @@ Dilek Küçük is an associate professor and chief researcher at the Energy Inst
 <u>Fazli Can</u>
 <p/>
 Fazli Can is a full professor and leader of the Bilkent Information Retrieval Group at the Computer Engineering Department of Bilkent University in Ankara, Turkey. Previously, he was a tenured full professor at the Computer Science Department of Miami University in Oxford, OH, USA where he taught between 1986 and 2005. He received the Ph.D. degree in Computer Engineering from Middle East Technical University (Ankara, Turkey) in 1985. During his Ph.D., he had also studied at Arizona State University, Tempe, AZ, USA, and Intel, Chandler, AZ, USA; as a part of the RAP Database Machine Project. He was one of the two co-editors of ACM SIGIR Forum between 1995 and 2002. He has extensively published in information retrieval, data mining, natural language processing, and quantitative linguistics research forums such as the journals ACM-TKDD, ACM-TODS, ACM-TOIS, IEEE-TNNLS, IP&M, and JASIST. He has participated in and served on several conference program committees; such as ASONAM, CIKM, ECIR, and SIGIR; as a member, senior member, or general co-chair. He was a joint tutorial presenter at the SIGIR 2013, WSDM 2014, WWW 2015, and SIGIR 2021 conferences. His recent joint works on data stream processing and stance detection appeared in conferences\slash journals such as CIKM, ACM-TKDD, ACM-CSUR, IEEE-TNNLS, and Art. Int. Rev.His personal Web page is available at <a href="http://www.cs.bilkent.edu.tr/~canf">http://www.cs.bilkent.edu.tr/~canf</a>
-
+<p/>
+  
 </body>
 </html> 
