--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body, h1, h2, h3, h4, h5, h6  {
 <body>
 <center>
 <h3>A Tutorial on Stance Detection</h3>
+  (by Dilek Küçük and Fazli Can)<p/>
 Tutorial at the 15th ACM International Conference on Web Search and Data Mining <a href="https://www.wsdm-conference.org/2022/">(WSDM 2022)</a><p/>
 </center>
 <p/>
