--- a/index.html
+++ b/index.html
@@ -83,5 +83,8 @@ Dilek Küçük is an associate professor and chief researcher at the Energy Inst
 Fazli Can received the B.S. and M.S. degrees in electrical and electronics and computer engineering and the Ph.D. degree in computer engineering from Middle East Technical University, Ankara, Turkey, in 1976, 1979, and 1985, respectively. He conducted his Ph.D. research under the supervision of Prof. E. Ozkarahan; at Arizona State University, Tempe, AZ, USA, and Intel, Chandler, AZ, USA; as a part of the RAP Database Machine Project. He is currently a Faculty Member at Bilkent University, Ankara. Before joining Bilkent, he was a tenured Full Professor at Miami University, Oxford, OH, USA. He co-edited ACM SIGIR Forum from 1995 to 2002 and is a Co-Founder of the Bilkent Information Retrieval Group, Bilkent University. His interest in dynamic information processing dates back to his 1993 incremental clustering paper in ACM Transactions on Information Systems and some other earlier work with Prof. E. Ozkarahan on dynamic cluster maintenance. His current research interests include information retrieval and data mining. His personal Web page is available at <a href="http://www.cs.bilkent.edu.tr/~canf">http://www.cs.bilkent.edu.tr/~canf</a>.
 <p/>
   
+<h4>Presentation Files</h4>
+<a href="Stance_Detection_Tutorial_WSDM2022_Part1.pdf">Tutorial Presentation (Part-1)</a>&nbsp;&nbsp;&nbsp;<a href="Stance_Detection_Tutorial_WSDM2022_Part2.pdf">Tutorial Presentation (Part-2)</a>.
+
 </body>
 </html> 
