--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Fazli Can received the B.S. and M.S. degrees in electrical and electronics and c
 <p/>
   
 <h4>Presentation Files</h4>
-<a href="Stance_Detection_Tutorial_WSDM2022_Part1.pdf">Tutorial Presentation (Part-1)</a>&nbsp;&nbsp;&nbsp;<a href="Stance_Detection_Tutorial_WSDM2022_Part2.pdf">Tutorial Presentation (Part-2)</a>
+<a href="Stance_Detection_Tutorial_WSDM2022_Part1.pdf">Stance Detection Tutorial Presentation (Part-1)</a>&nbsp;&nbsp;&nbsp;<a href="Stance_Detection_Tutorial_WSDM2022_Part2.pdf">Stance Detection Tutorial Presentation (Part-2)</a>
 <p>
   
 <h2/>
